plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.3'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()

	maven {
		setUrl("https://maven.lavalink.dev/releases")
	}

	maven {
		setUrl("https://jitpack.io")
	}
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// JDA 설정
	implementation "net.dv8tion:JDA:5.2.2"

	// junit 설정
	testImplementation platform("org.junit:junit-bom:5.9.1")
	testImplementation "org.junit.jupiter:junit-jupiter"

	// lavaplayer와 youtube-source 설정
	implementation "dev.arbjerg:lavaplayer:2.2.2"
	implementation "dev.lavalink.youtube:common:1.11.2"

	// 로그 기록
	implementation "org.slf4j:slf4j-api:2.0.9"
	implementation 'org.springframework.boot:spring-boot-starter-logging'

	// gson 라이브러리 추가
	implementation 'com.google.code.gson:gson:2.8.9'


}

tasks.named('test') {
	useJUnitPlatform()
}
